--- a/depot/config/locales/es.yml
+++ b/depot/config/locales/es.yml
@@ -19,27 +19,27 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
+es:
   layouts:
     application:
-      window_title: "Pragprog Books Online Store"
-      title: "Pragmatic Bookshelf"
-      home: "Home"
+      window_title: "Tienda Online de Publicaciones de Pragmatic"
+      title: "Publicaciones de Pragmatic"
+      home: "Inicio"
   store:
     index:
-      title_html: "Your Pragmatic Catalog"
-      add_html: "Add to Cart"
+      title_html: "Su Cat&aacute;logo de Pragmatic"
+      add_html: "A&ntilde;adir al Carrito"
   carts:
     cart:
-      title: "Your Cart"
-      empty: "Empty cart"
-      checkout: "Checkout"
-      confirm: "Are you sure?"
+      title: "Carrito de la Compra"
+      empty: "Vaciar Carrito"
+      checkout: "Comprar"
+      confirm: "Estás seguro?"
   number:
     currency:
       format:
-        unit: "$"
+        unit: "$US"
         precision: 2
-        separator: "."
-        delimiter: ","
-        format: "%u%n"
+        separator: ","
+        delimiter: "."
+        format: "%n&nbsp;%u"
