--- a/depot/config/locales/en.yml
+++ b/depot/config/locales/en.yml
@@ -43,3 +43,20 @@ en:
         separator: "."
         delimiter: ","
         format: "%u%n"
+  orders:
+    new:
+      legend: "Please Enter Your Details"
+    form:
+      name: "Name"
+      address_html: "Address"
+      email: "E-mail"
+      pay_type: "Pay with"
+      pay_prompt_html: "Select a payment method"
+      submit: "Place Order"
+  errors:
+    template:
+      body: "There were problems with the following fields:"
+      header:
+        one: "1 error prohibited this %{model} from being saved"
+        other: "%{count} errors prohibited this %{model} from being saved"
+  thanks: "Thank you for your order"
